--- a/package.json
+++ b/package.json
@@ -8,25 +8,25 @@
     "lint": "eslint . --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "@mdi/font": "7.0.96",
-    "pinia": "^2.0.23",
+    "@mdi/font": "7.1.96",
+    "pinia": "^2.0.30",
     "roboto-fontface": "*",
-    "vue": "^3.2.38",
+    "vue": "^3.2.47",
     "vue-i18n": "^9.2.2",
-    "vue-router": "^4.0.0",
-    "vuetify": "^3.0.0",
-    "webfontloader": "^1.0.0"
+    "vue-router": "^4.1.6",
+    "vuetify": "^3.1.3",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
-    "@types/node": "^18.11.9",
+    "@types/node": "^18.13.0",
     "@types/webfontloader": "^1.6.35",
-    "@vitejs/plugin-vue": "^3.0.3",
-    "@vue/eslint-config-typescript": "^11.0.0",
-    "eslint": "^8.22.0",
-    "eslint-plugin-vue": "^9.3.0",
-    "typescript": "^4.0.0",
-    "vite": "^3.0.9",
-    "vite-plugin-vuetify": "^1.0.0-alpha.12",
-    "vue-tsc": "^1.0.9"
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/eslint-config-typescript": "^11.0.2",
+    "eslint": "^8.33.0",
+    "eslint-plugin-vue": "^9.9.0",
+    "typescript": "^4.9.5",
+    "vite": "^4.1.1",
+    "vite-plugin-vuetify": "^1.0.2",
+    "vue-tsc": "^1.0.24"
   }
 }
